syntax = "proto3";

package meme.feed;
option go_package = "github.com/materkov/meme9/api/feed";

// Feed service
service Feed {
  rpc GetFeed(FeedRequest) returns (FeedResponse);
}

message FeedRequest {
  string type = 1; // "all" or "subscriptions"
}

message FeedPostResponse {
  string id = 1;
  string text = 2;
  string userId = 3;
  string username = 4;
  string createdAt = 5; // RFC3339 format
}

message FeedResponse {
  repeated FeedPostResponse posts = 1;
}

